# amux

./: .gitignore  CHANGELOG.md  Makefile  README.md  design.md  go.mod  idea.md
amuxd/: Cargo.toml
amuxd/scripts/: manual_verify.sh  manual_verify_shell.sh  manual_verify_terminal.sh  measure_terminal_latency.sh  terminal_reliability_5000_keys.sh
amuxd/src/: lib.rs  main.rs  shell.rs  store.rs  terminal.rs  terminal_io.rs
amuxshell-web/: package-lock.json  package.json
amuxshell-web/scripts/: build.sh
amuxshell-web/src/: app.css  app.js  core.js
amuxshell-web/test/: core.test.mjs
amuxterm-web/: Cargo.toml
amuxterm-web/examples/: render_benchmark.rs
amuxterm-web/fixtures/: browser-fixtures.json
amuxterm-web/scripts/: benchmark_renderer.sh
amuxterm-web/src/: lib.rs
cmd/amux/: main.go
cmd/amux-sidebar/: main.go
data/: sessions.json
docs/: terminal-browser-matrix.md  web-shell-manual-verification.md
internal/agents/: agents.go
internal/config/: config.go
internal/session/: session.go
internal/sidebar/: sidebar.go
internal/status/: status.go
internal/tmux/: tmux.go
internal/tui/: debug.go  model.go  runner.go  styles.go  update.go
internal/tui/pty/: pty.go
openspec/changes/add-bubble-tea-tui/: design.md  proposal.md  tasks.md
openspec/changes/agent-orchestrator/: design.md  tasks.md
openspec/changes/archive/2026-03-12-agent-orchestrator/: proposal.md  tasks.md
openspec/changes/archive/2026-04-11-daemon-api-event-stream-baseline/: proposal.md
openspec/changes/archive/2026-04-11-minimal-web-shell-v1-baseline/: design.md
openspec/changes/archive/2026-04-11-stream-first-terminal-transport/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-terminal-renderer-v1-baseline/: design.md  tasks.md
openspec/changes/daemon-api-event-stream-baseline/: design.md  tasks.md
openspec/changes/ghostty-terminal/: design.md  proposal.md  tasks.md
openspec/changes/minimal-web-shell-v1-baseline/: proposal.md  tasks.md
openspec/changes/stream-first-terminal-transport/: tasks.md
openspec/changes/terminal-renderer-v1-baseline/: proposal.md  tasks.md
openspec/changes/tui-sidebar-overlay/: design.md  proposal.md  tasks.md
openspec/changes/workspace-worktree-sqlite-foundation/: proposal.md  tasks.md
openspec/specs/agent-status-monitoring/: spec.md
openspec/specs/daemon-api-event-stream-baseline/: spec.md
openspec/specs/opencode-integration/: spec.md
openspec/specs/selected-session-shell-stream-v1/: spec.md
openspec/specs/session-orchestration/: spec.md
openspec/specs/terminal-stream-transport-v1/: spec.md
openspec/specs/terminal-web-surface-v1/: spec.md
pkg/plugins/opencode/: plugin.go
(+21 files in other folders)
