[package]
name = "amuxterm-web"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "Window",
] }
